# django-mini-system-monitor

./: LICENSE  MANIFEST.in  README.md  boot_django.py  makemigrations.py  migrate.py  requirements.txt  runserver.py  setup.cfg  upload.sh
mini_system_monitor/: admin.py  apps.py  models.py
mini_system_monitor/migrations/: 0002_overview.py  0004_auto_20210716_2353.py
mini_system_monitor/static/mini_system_monitor/js/: gridjs.js
mini_system_monitor/templates/admin/: env_change_list.html  overview_change_list.html  settings_change_list.html
sample_project/: requirements.txt
sample_project/mini-system-monitor/: admin.py  apps.py  models.py
sample_project/mini-system-monitor/migrations/: 0001_initial.py  0002_overview.py
sample_project/mini-system-monitor/static/mini-system-monitor/css/: style.css
sample_project/mini-system-monitor/static/mini-system-monitor/js/: index.js
sample_project/mini-system-monitor/templates/admin/: overview_change_list.html
sample_project/mini_system_monitor/: __init__.py  admin.py  apps.py
sample_project/mini_system_monitor/migrations/: 0001_initial.py  0003_settings.py
sample_project/mini_system_monitor/static/mini_system_monitor/js/: index.js
sample_project/mini_system_monitor/templates/admin/: overview_change_list.html
sample_project/sample_project/: asgi.py  settings.py  urls.py  wsgi.py
