[metadata]
name = django-mini-system-monitor
version = 0.1
description = System Status in Django Admin
long_description = file: README.md
url = https://github.com/dannluciano/django-mini-system-monitor
author = Dann Luciano
author_email = dannluciano@ifpi.edu.br
license = BSD
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
[options]
packages = find:
include_package_data = true
python_requires = >=3
setup_requires =
    setuptools >= 52.0.0
install_requires =
    Django>=3
    psutil>=5.8